# talon-bin

./: .gitignore  README.md  release.sh
.github/workflows/: build-bundle.yml  publish-sdk.yml
talon-bundle/: Cargo.toml
talon-bundle-evocore/: Cargo.toml
talon-bundle-evocore/src/: lib.rs
talon-bundle/src/: lib.rs
talon-server/: Cargo.toml
talon-server-full/: Cargo.toml
talon-server-full/src/: main.rs
talon-server/src/: main.rs
talon-sys/: Cargo.toml  build.rs
talon-sys/src/: evocore.rs  lib.rs
