#
# Copyright (c) 2026 Talon Contributors
# Author: dark.lijin@gmail.com
# Licensed under the Talon Community Dual License Agreement.
# See the LICENSE file in the project root for full license information.
#
[package]
name = "talon-sys"
version = "0.1.3"
edition = "2021"
description = "FFI bindings to Talon — AI-native multi-model data engine"
license = "MIT"
repository = "https://github.com/darkmice/talon-bin"
readme = "../README.md"
keywords = ["database", "embedded", "vector", "ai", "ffi"]
categories = ["database-implementations", "external-ffi-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
